--- a/BugTracker/Services/BugTracker.Services/BugTracker.Services.csproj
+++ b/BugTracker/Services/BugTracker.Services/BugTracker.Services.csproj
@@ -5,10 +5,20 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\Data\BugTracker.Data.Models\BugTracker.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\BugTracker.Data\BugTracker.Data.csproj" />
     <ProjectReference Include="..\..\Web\BugTracker.Web.ViewModels\BugTracker.Web.ViewModels.csproj" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.113" PrivateAssets="all">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
