--- a/BugTracker/Data/BugTracker.Data/BugTracker.Data.csproj
+++ b/BugTracker/Data/BugTracker.Data/BugTracker.Data.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.csproj" />
     <ProjectReference Include="..\BugTracker.Data.Models\BugTracker.Data.Models.csproj" />
   </ItemGroup>
 
