Made view models and input models for the company entity. Added descr\iption property to companies.

--- a/BugTracker/Web/BugTracker.Web.ViewModels/BugTracker.Web.ViewModels.csproj
+++ b/BugTracker/Web/BugTracker.Web.ViewModels/BugTracker.Web.ViewModels.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\BugTracker.Data.Models\BugTracker.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Services\BugTracker.Services.Mapping\BugTracker.Services.Mapping.csproj" />
   </ItemGroup>
 
 </Project>
