--- a/BugTracker/Tests/BugTracker.Services.Data.Tests/BugTracker.Services.Data.Tests.csproj
+++ b/BugTracker/Tests/BugTracker.Services.Data.Tests/BugTracker.Services.Data.Tests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.Moq" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
