--- a/BugTracker/Web/BugTracker.Web/BugTracker.Web.csproj
+++ b/BugTracker/Web/BugTracker.Web/BugTracker.Web.csproj
@@ -51,4 +51,9 @@
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <None Include="wwwroot\vendor\moment\min\moment-with-locales.min.js" />
+  </ItemGroup>
+
 </Project>
